# esp_training

./: README.md
SNTP/: CMakeLists.txt  sdkconfig
SNTP/main/: main.c
adc/adc_dma/: CMakeLists.txt
adc/adc_interr/: CMakeLists.txt
blink/: sdkconfig
blink/main/: blink_example_main.c
bluetooth/ble_gatt/: CMakeLists.txt  sdkconfig  sdkconfig.old
bluetooth/ble_gatt_led_on/: CMakeLists.txt
bluetooth/ble_gatt_notify/: CMakeLists.txt  sdkconfig
bluetooth/ble_spp/: CMakeLists.txt  sdkconfig
cbor_to_str/: CMakeLists.txt
cbor_to_str/main/: main.c
flash/MX25R3235F/: CMakeLists.txt
flash/MX25R3235F/bsp/components/MX25R3235F/: CMakeLists.txt  MX25R3235F.c
flash/MX25R3235F_1/: CMakeLists.txt  sdkconfig
gpio_rd_wr/main/: blink_example_main.c
hello_world/: sdkconfig.old
hello_world_rgb/main/: CMakeLists.txt  hello_world_main.c  neopixel.h
http/http_echo_server/: CMakeLists.txt
i2c/sht21/: CMakeLists.txt
i2c/sht21_interrupt/: CMakeLists.txt
interrupt/main/: blink_example_main.c
interrupt_print/: sdkconfig.old
interrupt_print/main/: blink_example_main.c
mqtt/mqtt_example/: CMakeLists.txt
mqtt/mqtt_json_update/: CMakeLists.txt
nvs/nvs_rd_wr/: CMakeLists.txt
nvs/nvs_rd_wr_1/: CMakeLists.txt  sdkconfig
ota/advanced_https_ota/: CMakeLists.txt  sdkconfig  sdkconfig.old  upload_server.py
ota/advanced_https_ota (copy 1)/: README.md  ca_key.pem
ota/ota_updates/: CMakeLists.txt  sdkconfig  sdkconfig.old
queue/main/: main.c
rtc/alarm/: CMakeLists.txt
sleep_modes/light_sleep_mode/: CMakeLists.txt  sdkconfig
storage/spiffs/: sdkconfig  (+2 more)
(+84 files in other folders)
